<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_Motion_Inputs" Id="{22bf156f-0142-4b0e-a2c7-c04907dd37a3}">
    <Declaration><![CDATA[TYPE ST_Motion_Inputs :
STRUCT
	
// MC_PowerStepper
	
bDestallParameters	: ST_PowerStepperStruct;
nKL_Status			: USINT;
nKL_Status2			: UINT;

// MC_Stop

bStopDecel			: LREAL;
bStopJerk			: LREAL;
stStopOptions		: ST_MoveOptions;

// MC_Halt

bHaltDecel			: LREAL;
bHaltJerk			: LREAL;
HaltBufferMode		: MC_BufferMode;
HaltOptions			: ST_MoveOptions;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>